# trading-platform

./: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  strategy_config.json  worker.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_tick_and_decision_logs.py  0003_add_algo_configs_and_state.py  0004_add_candles.py  0005_volume_bigint.py  0006_add_algo_name_to_signals.py  0007_merge_heads.py  0008_add_broker_tokens.py  bc159b538704_add_indicator_logs.py
data/ASIANPAINT/: 15min.parquet  day.parquet
data/AXISBANK/: 15min.parquet  day.parquet
data/BAJAJFINSV/: 15min.parquet  day.parquet
data/BAJFINANCE/: 15min.parquet  day.parquet
data/BRITANNIA/: 15min.parquet  day.parquet
data/CIPLA/: 15min.parquet  day.parquet
data/COALINDIA/: 15min.parquet  day.parquet
data/DIVISLAB/: 15min.parquet  day.parquet
data/DRREDDY/: 15min.parquet  day.parquet
data/HCLTECH/: 15min.parquet  day.parquet
data/HDFCBANK/: 15min.parquet  1min.parquet  5min.parquet  day.parquet
data/HINDUNILVR/: 15min.parquet  day.parquet
data/ICICIBANK/: 15min.parquet  1min.parquet  5min.parquet  day.parquet
data/INFY/: 15min.parquet  1min.parquet  5min.parquet  day.parquet
data/ITC/: 15min.parquet  day.parquet
data/KOTAKBANK/: 15min.parquet  day.parquet
data/LT/: 15min.parquet  day.parquet
data/MARUTI/: 15min.parquet  day.parquet
data/NESTLEIND/: 15min.parquet  day.parquet
data/NTPC/: 15min.parquet  day.parquet
data/ONGC/: 15min.parquet  day.parquet
data/POWERGRID/: 15min.parquet  day.parquet
data/RELIANCE/: 15min.parquet  1min.parquet  5min.parquet  day.parquet
tst/: README.md
tst/integ/strategy-testing/: conftest.py  pyproject.toml
tst/integ/strategy-testing/session_results/174476bd-0567-4865-9f79-b43ec3c47165/: report.json
tst/integ/strategy-testing/session_results/c65d38ce-c7b4-44f3-bfbd-5f001cdd24de/: report.json
tst/integ/strategy-testing/session_results/eaff8bd3-da9e-43c1-b3eb-10ef609a1881/: report.json
tst/integ/strategy-testing/strategy-testing/: vwap_search_results.csv
tst/integ/strategy-testing/strategy-testing/indicators/: conftest.py  indicator_catalogue.json  indicator_ic_daily_results.csv  indicator_wf_ic_results.csv  test_indicator_correlation.py  test_indicator_decay.py  test_indicator_ic.py  test_indicator_quintile.py  test_indicator_regime.py
tst/integ/strategy-testing/strategy-testing/indicators/reports/: indicator_correlation_results.csv  indicator_decay.html  indicator_decay_results.csv  indicator_ic_15min.html  indicator_quintile_results.csv  indicator_regime_results.csv
tst/integ/strategy-testing/strategy-testing/strategies/: test_backtest.py  test_diagnose_signals.py  test_monte_carlo.py  test_orb_search.py
tst/integ/strategy-testing/testing/: registry.py  report_base.py  session.py
tst/integ/strategy-testing/testing/backtesting/: data_loader.py
tst/integ/strategy-testing/testing/indicators/: catalogue.py
tst/integ/strategy-testing/testing/monte_carlo/: report.py  simulator.py
tst/integ/strategy-testing/testing/simulators/: candle_player.py
tst/integ/system/: README.md  conftest.py  helpers.py  pyproject.toml  test_broker_failure.py  test_integration.py  test_order_lifecycle.py  test_risk_guardrails.py  test_state_recovery.py
tst/integ/system/simulators/: README.md  fault_injector.py
(+375 files in other folders)
